k8/platform/technitium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: technitium
  labels:
    app.kubernetes.io/name: technitium
    app.kubernetes.io/part-of: platform
