k8/platform/technitium/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-dns
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.64.201"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
