k8/platform/technitium/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - name: web-ui
      port: 5380
      targetPort: web-ui
      protocol: TCP
